# app-pc

./: README.md  package.json  pnpm-lock.yaml  update.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
